Remove systemd process number limit
The bionic stemcell contains systemd v237 which by default gives a limit
of 4915 processes to system cgroups. This restriction can cause jobs
to fail when under load. So we are reverting to the xenial default of
pids.max = max.

Co-authored-by: Georgi Sabev <georgethebeatle@gmail.com>
Signed-off-by: Mario Nitchev <marionitchev@gmail.com>

--- a/jobs/worker/templates/concourse.service
+++ b/jobs/worker/templates/concourse.service
@@ -7,3 +7,4 @@ ExecStart=/var/vcap/jobs/worker/bin/concourse_start
 ExecStop=/var/vcap/jobs/worker/bin/concourse_stop
 Delegate=yes
 KillMode=none
+TasksMax=infinity
