point to hetzner object storage
Signed-off-by: Taylor Silva <dev@taydev.net>

--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,7 @@
 ---
 final_name: concourse
 blobstore:
-  provider: gcs
+  provider: s3
   options:
-    bucket_name: concourse-bosh-blobs
+    bucket_name: concourse-bosh
+    host: https://fsn1.your-objectstorage.com
