--- a/config/final.yml
+++ b/config/final.yml
@@ -1,7 +1,6 @@
 ---
 final_name: concourse
 blobstore:
-  provider: s3
+  provider: gcs
   options:
-    bucket_name: concourse-bosh
-    host: https://fsn1.your-objectstorage.com
+    bucket_name: concourse-bosh-blobs
